feat: adding getPopularBooksAllTime to ReportDAO