@@ -86,6 +86,8 @@
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.Operator=ALL-UNNAMED
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.User=ALL-UNNAMED
                         --add-opens com.pbl.biblioteca/com.pbl.biblioteca.model=ALL-UNNAMED
+                        --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.Report=ALL-UNNAMED
+                        --add-opens com.pbl.biblioteca/com.pbl.biblioteca.dao.Reader=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
